<resources>
    <string name="app_name">My Application</string>
    <string name="main_top_title">漫途社区</string>
    <string name="main_top_temperature">20℃</string>

    <string name="menu_catering">catering</string>
    <string name="menu_message">message</string>
    <string name="menu_express">express</string>
    <string name="menu_flea">flea</string>
    <string name="menu_shopping">shopping</string>
    <string name="menu_traffic">traffic</string>
    <string name="menu_medical">hospital</string>
    <string name="menu_living">living</string>
    <string name="menu_notification">information</string>
    <string name="menu_service">service</string>
    <string name="menu_repair">repair</string>
    <string name="menu_payment">bill</string>
    <string name="menu_note">notepad</string>
    <string name="menu_wifi">wifi</string>
    <!--注册-->
    <string name="register_top_title">注册</string>
    <string name="register_confirm">确定</string>
    <string name="verification_fill_remind">请填写四位数验证码</string>
    <string name="register_input_remind">请输入6-20位由英文字母、数字或符号组成的密码</string>
    <string name="register_please_input_password">请输入密码</string>
    <string name="register_please_confirm_password">请确认密码</string>
    <string name="please_input_mobile">请输入手机号</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_confirm_password">您两次输入的密码不一致</string>
    <string name="please_phone_code_error">验证码错误</string>
    <!--登录-->
    <string name="login_top_welcome">您好，朋友！</string>
    <string name="login_count_remind">请输入账号</string>
    <string name="login_password_remind">请输入密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_quick_register">快速注册</string>
    <!--重置密码-->
    <string name="forget_password_reset_password">重置密码</string>
    <string name="phone_number">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="forget_password_finish">完成</string>
    <string name="forget_password_get_verification_code">获取验证码</string>
    <string name="forget_password_new_password_remind">请输入新密码</string>

    <!--用户中心-->
    <string name="user_center_information_remind">还没有信息哦，快来完善吧</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_order">我的订单</string>
    <string name="my_address_manage">地址管理</string>
    <string name="my_vouvcher">代金券</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_setting">设置</string>
    <string name="my_about">关于</string>

    <!--餐饮、购物、生活服务-->
    <string name="catering">餐饮</string>
</resources>
