<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_gray_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/include_main_topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/whiter"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_mobile_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="+86"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:inputType="number"
            android:textCursorDrawable="@drawable/editext_cursor_color"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/whiter"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/verification_code"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_verification_code_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_weight="1"
            android:hint="@string/verification_fill_remind"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:ellipsize="end"
            android:inputType="number"
            android:textCursorDrawable="@drawable/editext_cursor_color"
            android:textSize="16sp" />
        <Button
            android:id="@+id/register_verification_btn"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/register_verification_code_button_bg"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/forget_password_get_verification_code" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/register_input_remind"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@color/whiter"
       android:orientation="vertical">
       <EditText
           android:id="@+id/register_input_et"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:background="@null"
           android:hint="@string/register_please_input_password"
           android:paddingLeft="20dp"
           android:textColor="@color/black"
           android:singleLine="true"
           android:ellipsize="end"
           android:textCursorDrawable="@drawable/editext_cursor_color"
           android:textSize="16sp" />
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/whiter"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/register_confirm_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/register_please_confirm_password"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:ellipsize="end"
            android:textCursorDrawable="@drawable/editext_cursor_color"
            android:textSize="16sp" />
    </LinearLayout>
    <Button
        android:id="@+id/register_confirm_btn"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/main_button_finish_bg"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/register_confirm"
        android:textColor="@color/whiter" />
</LinearLayout>